k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarthome-simple-service-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: smarthome-simple-service
