k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /simple
            pathType: Prefix
            backend:
              service:
                name: smarthome-simple-service-service
                port:
                  number: 8080
